Save all changes - complete system update with new features and refactoring